-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11, 17, 18, 19
-
Component/s: client-libs
-
b17
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8286251 | 18u-cpu | Zhengyu Gu | P3 | Resolved | Fixed | master |
| JDK-8286151 | 18.0.2 | Zhengyu Gu | P3 | Resolved | Fixed | b06 |
| JDK-8287278 | 17.0.7-oracle | Anton Litvinov | P3 | Resolved | Fixed | b01 |
| JDK-8286150 | 17.0.4 | Zhengyu Gu | P3 | Resolved | Fixed | b02 |
| JDK-8296325 | 11.0.19-oracle | Anton Litvinov | P3 | Resolved | Fixed | b01 |
| JDK-8299455 | 11.0.19 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
| JDK-8296902 | 8u371 | Anton Litvinov | P3 | Resolved | Fixed | b01 |
- backported by
-
JDK-8286150 java.sun.awt.X11GraphicsDevice.getDoubleBufferVisuals() leaks XdbeScreenVisualInfo
-
- Resolved
-
-
JDK-8286151 java.sun.awt.X11GraphicsDevice.getDoubleBufferVisuals() leaks XdbeScreenVisualInfo
-
- Resolved
-
-
JDK-8286251 java.sun.awt.X11GraphicsDevice.getDoubleBufferVisuals() leaks XdbeScreenVisualInfo
-
- Resolved
-
-
JDK-8287278 java.sun.awt.X11GraphicsDevice.getDoubleBufferVisuals() leaks XdbeScreenVisualInfo
-
- Resolved
-
-
JDK-8296325 java.sun.awt.X11GraphicsDevice.getDoubleBufferVisuals() leaks XdbeScreenVisualInfo
-
- Resolved
-
-
JDK-8296902 java.sun.awt.X11GraphicsDevice.getDoubleBufferVisuals() leaks XdbeScreenVisualInfo
-
- Resolved
-
-
JDK-8299455 java.sun.awt.X11GraphicsDevice.getDoubleBufferVisuals() leaks XdbeScreenVisualInfo
-
- Resolved
-
- relates to
-
JDK-8285399 JNI exception pending in awt_GraphicsEnv.c:1432
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/c898a3ed
-
Commit
openjdk/jdk17u-dev/75cfc998
-
Commit
openjdk/jdk18u/27259135
-
Commit
openjdk/jdk/ec205f68
-
Review
openjdk/jdk11u-dev/1041
-
Review
openjdk/jdk11u-dev/1623
-
Review
openjdk/jdk17u-dev/355
-
Review
openjdk/jdk18u/105
-
Review
openjdk/jdk/8047